Agregar jugador/Seleccion

--- a/app/views/jugadores.html
+++ b/app/views/jugadores.html
@@ -12,7 +12,7 @@
         <th>Club</th>
         <th>Edad</th>
         <th>Posición</th>
-        <th>Id.Selección</th>
+        <th>País</th>
         <th>Edición</th>
       </tr>
     </thead>
@@ -23,7 +23,7 @@
         <td>{{d.Club}}</td>
         <td>{{d.Edad}}</td>
         <td>{{d.Posicion}}</td>
-        <td>{{d.IdSeleccion.Id}}</td>
+        <td>{{d.IdSeleccion.Pais}}</td>
         <td class="text-right">
             <a href="#/editarjugador/{{d.Id}}"><img src="images/iconos/edit.png"></a>
             <a href="#/eliminarjugador/{{d.Id}}"><img src="images/iconos/delete.png"></a>
