--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,14 +1,11 @@
 <br>
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3 class="page-header">  {{ 'TITULO' | translate }} </h3>
+        <h3 class="page-header">  {{ "Mundial de Futbol Rusia 2018" | translate }} </h3>
     </div>
     <div class="panel-body">
       <p>
         {{ 'MENSAJE_INICIAL' | translate }}
       </p>
-    </div>
-    <div class="panel-footer">
-        Panel Footer
     </div>
 </div>
