--- a/app/views/menu.html
+++ b/app/views/menu.html
@@ -6,7 +6,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" ng-href="#/">practica1frontendApp</a>
+    <a class="navbar-brand" ng-href="#/">Mundial de Futbol Rusia 2018</a>
   </div>
   <div id="navbar" class="navbar-collapse collapse in">
     <ul class="nav navbar-top-links navbar-right">
