--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,11 +1,14 @@
-<br>
 <div class="panel panel-default">
+  <div style="width:100%; height:300px;">
+    <img src="images/iconos/header.jpg" style="width:100%; height:100%">
+  </div>
     <div class="panel-heading">
         <h3 class="page-header">  {{ "Mundial de Futbol Rusia 2018" | translate }} </h3>
     </div>
     <div class="panel-body">
-      <p>
-        {{ 'MENSAJE_INICIAL' | translate }}
-      </p>
+      <a class="btn btn-success btn-lg" style="width: 300px;" href="#/agregarjugador">Agregar Jugador</a>
+      <a class="btn btn-success btn-lg" style="width: 300px;" href="#/agregarseleccion">Agregar Seleccion</a>
+      <a class="btn btn-success btn-lg" style="width: 300px;" href="#/selecciones">Visualizar Selecciones</a>
+      <a class="btn btn-success btn-lg" style="width: 300px;" href="#/jugadores">Visualizar Jugadores</a>
     </div>
 </div>
